--- a/dev.html
+++ b/dev.html
@@ -10,7 +10,7 @@
 
     <title>GA:TC - THE GAME</title>
 
-    <link rel="shortcut icon" href="img/portfolio/fullsize/logo.png" />
+    <link rel="shortcut icon" href="img/portfolio/fullsize/logo.ico" />
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
