--- a/contact.html
+++ b/contact.html
@@ -94,6 +94,7 @@ type="text/css">
     <div class="contact-form">
       <div class="col-lg-8 col-md-10 mx-auto">
           <form id="contact-form">
+              <form action="mail/contact_me.php" method="POST">
               <div class="form-group">
                   <label class="form-label" for="name">Your Name</label>
                   <input type="text" class="form-control name" id="name" name="name" placeholder="Your name" tabindex="1" required>
